@@ -1,3 +1,7 @@
+2006-10-01 Tim
+ PATCH [ 1566474 ] Web: Improve translations index page
+  Web\developer\l10n: index.php
+
 2006-09-26 Tim
  PATCH [ 1565841 ] Web: Catalan translation is updated
   Web\developer\l10n: status.xml
